--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   job1:
-    uses: ./.github/workflows/reusable.yml
+    uses: ./.github/workflows/reusable.yml@v1
   job2:
     runs-on: ubuntu-latest
     needs: job1
